# NFX_APP_VISION

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  main.cpp  nfxGUI.ini  version.rc.in
App/: App.cpp  App.h
Gui/: CameraController (2).cpp  CameraController.cpp  CameraController.h  CameraViewport (2).cpp  CameraViewport.cpp  CameraViewport.h  Gui (2).cpp  Gui (2).h  Gui.cpp  Gui.h  SimpleOverlay (2).h  SimpleOverlay.cpp  SimpleOverlay.h
VideoCapture/: VideoCaptureDevice.cpp  VideoCaptureDevice.h  VideoCaptureDevice_.cpp  VideoCaptureDevice_.h  VideoFrame.h
cmake/: Definitions.cmake  Dependencies.cmake  Options.cmake  Sources.cmake
pch/: pch.h
ui/: CameraController.cpp  CameraController.h  CameraViewport.cpp  CameraViewport.h  Gui.cpp  Gui.h  MainWidget.cpp  MainWidget.h  MenuBar.cpp  MenuBar.h  StatusBar.cpp  StatusBar.h
